deploy/overlays/public/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: einsatzbereit
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: einsatzbereit.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: einsatzbereit
                port:
                  number: 80
